WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155493
REGRESSION (196383): Class change invalidation does not handle :not correctly
https://bugs.webkit.org/show_bug.cgi?id=155493
Summary
REGRESSION (196383): Class change invalidation does not handle :not correctly
Antti Koivisto
Reported
2016-03-15 08:58:54 PDT
We fail to invalidate bar style in :not(.foo) bar { } when class foo is added or removed.
Attachments
patch
(12.52 KB, patch)
2016-03-15 09:30 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(13.29 KB, patch)
2016-03-15 09:42 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(13.25 KB, patch)
2016-03-15 09:51 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-03-15 08:59:21 PDT
rdar://problem/24846762
Antti Koivisto
Comment 2
2016-03-15 09:30:37 PDT
Created
attachment 274099
[details]
patch
Antti Koivisto
Comment 3
2016-03-15 09:42:49 PDT
Created
attachment 274100
[details]
patch
Antti Koivisto
Comment 4
2016-03-15 09:51:01 PDT
Created
attachment 274101
[details]
patch
Andreas Kling
Comment 5
2016-03-15 10:04:38 PDT
Comment on
attachment 274101
[details]
patch r=me
Antti Koivisto
Comment 6
2016-03-15 10:26:51 PDT
https://trac.webkit.org/r198216
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug